fixed navbar on small screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,7 @@ img {
 }
 
 .my-image-style {
-  float: left;
+  /* float: left; */
   width: 30%;
   height: auto;
   border-radius: 50%;
@@ -39,13 +39,19 @@ img {
   background-color: #e0dae6;
   opacity: 90%;
   font-size: 22px !important;
+  text-align: center;
  
 }
 
+.nav-link {
+  text-align: center;
+}
+
 /* I know we can't use copywritten images found in google in RL, but figured it was okay for the class */
+
 body {
-      /* background-image: url('https://desktopwalls.net/wp-content/uploads/2018/12/Cat%20Looking%20Up%20Eye%20Closeup%20Dark%20Desktop%20Wallpaper.jpg'); */
-      background-image: url('../images/desktop.jpg');
+      background-image: url('https://desktopwalls.net/wp-content/uploads/2018/12/Cat%20Looking%20Up%20Eye%20Closeup%20Dark%20Desktop%20Wallpaper.jpg');
+      /* background-image: url('../images/desktop.jpg'); */
       background-repeat: no-repeat;
       background-attachment: fixed;
       background-size: cover;
